--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         bash build-tex.sh
         bash build-html.sh
+        ls docs/
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
